# advent_of_code_2024

./: CMakeLists.txt  README.md  aoc.hpp
dec01/: main.cpp
dec02/: main.cpp
dec03/: main.cpp
dec04/: main.cpp
dec05/: main.cpp
dec06/: main.cpp
dec07/: main.cpp
dec08/: main.cpp
dec09/: main.cpp
dec10/: main.cpp
dec11/: main.cpp
dec12/: main.cpp
dec13/: main.cpp
dec14/: main.cpp
dec16/: main.cpp
dec18/: main.cpp
dec19/: main.cpp
dec20/: main.cpp
dec21/: main.cpp
dec25/: main.cpp
